--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.1",
   "description": "Client for hackchain",
   "main": "lib/client.js",
-  "bin": "bin/hc-client",
+  "bin": {
+    "hc-client": "bin/hc-client"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
