--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   },
   "homepage": "https://github.com/indutny/hackchain-client#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.4",
     "bn.js": "^4.11.3",
     "hackchain-core": "^2.0.0",
     "js-yaml": "^3.6.0",
     "obuf": "^1.1.1",
     "prompt": "^1.0.0",
+    "proof-of-work": "^1.0.3",
     "wbuf": "^1.7.1",
     "yargs": "^4.7.0"
   }
